# kai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  services.example.yaml  users.yaml.example  workspaces.yaml.example
home/.claude/: CLAUDE.md  MEMORY.md.example
scripts/: clean-test-history.py
src/kai/: __init__.py  __main__.py  bot.py  claude.py  config.py  cron.py  history.py  install.py  locks.py  main.py  pool.py  prompt_utils.py  review.py  services.py  sessions.py  telegram_utils.py  totp.py  transcribe.py  triage.py  tts.py  webhook.py
tests/: conftest.py  test_bot.py  test_bot_totp.py  test_claude.py  test_config.py  test_cron.py  test_history.py  test_install.py  test_main.py  test_phase2_isolation.py  test_pool.py  test_prompt_utils.py  test_review.py  test_services.py  test_sessions.py  test_telegram_utils.py  test_totp.py  test_totp_cli.py  test_transcribe.py  test_triage.py  test_tts.py  test_user_config.py  test_webhook.py  test_webhook_api.py  test_workspace_config.py
workspace/.claude/: CLAUDE.md
