[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kai"
version = "1.2.0"
description = "Telegram gateway to Claude Code CLI"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot[ext]>=20.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
kai = "kai.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
tts = [
    "piper-tts>=1.4.0",
]
totp = [
    "pyotp>=2.9",
    "qrcode>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF005", # list concatenation vs unpacking (preference)
    "RUF012", # mutable class default (false positives with dataclasses)
    "SIM105", # contextlib.suppress vs try/except/pass (less readable for async)
    "SIM108", # ternary vs if/else (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["kai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
